force-app/main/default/objects/Asset/fields/Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>Asset_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Asset Id in external System</inlineHelpText>
    <label>Asset Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>