force-app/main/default/objects/Asset/fields/Balcony_Available__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Balcony Available</label>
    <type>Checkbox</type>
</CustomField>