force-app/main/default/objects/Asset/fields/Build_Year__c.field-meta.xml
<CustomField>
    <fullName>Build_Year__c</fullName>
    <label>Build Year</label>
    <length>8</length>
    <type>Text</type>
</CustomField>