force-app/main/default/objects/Asset/fields/Construction_Type__c.field-meta.xml
<CustomField>
    <fullName>Construction_Type__c</fullName>
    <label>Construction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DETACHED_HOUSE</fullName>
                <label>Detached House</label>
            </value>
            <value>
                <fullName>TERRACED_HOUSE</fullName>
                <label>Terraced House</label>
            </value>
            <value>
                <fullName>SEMI_DETACHED_HOUSE</fullName>
                <label>Semi Detached House</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>