force-app/main/default/objects/Asset/fields/Elevator_Available__c.field-meta.xml
<CustomField>
    <fullName>Elevator_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Elevator Available</label>
    <type>Checkbox</type>
</CustomField>