force-app/main/default/objects/Asset/fields/Flat_Type__c.field-meta.xml
<CustomField>
    <fullName>Flat_Type__c</fullName>
    <label>Flat Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FLAT</fullName>
            </value>
            <value>
                <fullName>TOP_FLOOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>