force-app/main/default/objects/Asset/fields/Garage_Available__c.field-meta.xml
<CustomField>
    <fullName>Garage_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Garage Available</label>
    <type>Checkbox</type>
</CustomField>