force-app/main/default/objects/Asset/fields/Is_Deleted_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_Deleted_By_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deleted By Customer</label>
    <type>Checkbox</type>
</CustomField>