force-app/main/default/objects/Asset/fields/Last_Known_Price__c.field-meta.xml
<CustomField>
    <fullName>Last_Known_Price__c</fullName>
    <label>Last Known Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>