force-app/main/default/objects/Asset/fields/Last_Known_Price_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Known_Price_Date__c</fullName>
    <label>Last Known Price Date</label>
    <type>Date</type>
</CustomField>