force-app/main/default/objects/Asset/fields/Latest_Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Evaluation_Date__c</fullName>
    <label>Latest Evaluation Date</label>
    <type>Date</type>
</CustomField>