force-app/main/default/objects/Asset/fields/Latest_Evaluation_Price__c.field-meta.xml
<CustomField>
    <fullName>Latest_Evaluation_Price__c</fullName>
    <label>Latest Evaluation Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>