force-app/main/default/objects/Asset/fields/Number_Of_Floors__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Floors__c</fullName>
    <label>Number Of Floors</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>