force-app/main/default/objects/Asset/fields/Plot_Size__c.field-meta.xml
<CustomField>
    <fullName>Plot_Size__c</fullName>
    <label>Plot Size</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>