force-app/main/default/objects/Asset/fields/Property_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>Property_Image_Url__c</fullName>
    <label>Property Image Url</label>
    <type>Url</type>
</CustomField>