force-app/main/default/objects/Asset/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APARTMENT_BUILDING</fullName>
                <label>Apartment Building</label>
            </value>
            <value>
                <fullName>FLAT</fullName>
                <label>Flat</label>
            </value>
            <value>
                <fullName>SINGLE_FAMILY_HOUSE</fullName>
                <label>Single Family House</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>